--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -627,7 +627,10 @@
     "- PoorWeightInitialization: NoIssuesFound\n",
     "- ProfilerReport: NoIssuesFound\n",
     "\n",
-    "With a value of 10 for the epochs, I obtained an IssueError for the \"Overtraining\" rule, indicating that the validation score was increasing. So, decreasing the number of epochs avoid to train for an unnecessary time."
+    "No issue was found, but when I tested with other configurations, I could obtain these errors : \n",
+    "- LowGPUUtilization: IssuesFound, as I was using an instance without enabling cuda.\n",
+    " \n",
+    "With enabling this possibility, we could also obtain this error if the workload is mainly managed by the CPU. It depends of the charge and the type of workload."
    ]
   },
   {
