explanation vanishing gradient added

--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -991,7 +991,8 @@
     "- ProfilerReport: IssuesFound\n",
     "- GPUMemoryIncrease: NoIssuesFound\n",
     "- OverallSystemUsage: NoIssuesFound\n",
-    " \n"
+    " \n",
+    "We can see that there is a major error of vanishing gradient : the weights of the neural network seem to be smaller and smaller. Normally, a solution would be to add a RELU layer, but this had already been done in the definition of the model. The model used is a resnet (residual network), known to mitigate vanishing gradient problem. Finally, normalizing each batch layer may counter this problem (we could simply do this at the output of the resnet50 to dynamize the weights). "
    ]
   },
   {
@@ -16335,13 +16336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Remember to shutdown/delete your endpoint once your work is done\n",
     "predictor.delete_endpoint()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
